# ros2_xenomai

./: CMakeLists.txt  README.md  package.xml
launch/: xeno_launch.launch.py
src/: main.cpp  pub_shm.cpp  subs.cpp  subs_shm.cpp
src2/: pub_rcl.cpp  subs_rcl.cpp
